--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <h2>Description</h2>
-         <p> This application takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.</p> 
-    <h2> About Akan Culture</h2>
+    <h2>Description.</h2>
+         <p> This application takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.<br> <strong> This application is user friendly and user responsive.</strong></br></p> 
+    <h2> About Akan Culture.</h2>
          <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names.</p>
-   
+        <p> For more information <href>click here </href> <src </p>
     <script> </script>
 </body>
 </html>
