Add a top div with center text alignment

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title> Birthday Dates Generator </title>
 </head>
 <body>
-
-    <h2>Description.</h2>
-         <p> This application takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.<br> <strong> This application is user friendly and user responsive.</strong></br></p> 
-    <h2> About Akan Culture.</h2>
-         <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names.</p>
-        <p> For more information <href>click here </href> <src </p>
+    <div class="top">
+        <h2>Description.</h2>
+        <p> This application takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.<br> <strong> This application is user friendly and user responsive.</strong></br></p> 
+        <h2> About Akan Culture.</h2>
+        <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+        <p> For more information <href>click here </href> src </p>
+    </div>
     <script> </script>
 </body>
 </html>
