--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
         <p> For more information <href>click here </href> src </p>
     </div>
+
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="First name">
+
+        <label> Second Name</label>
+        <input type="text" name="second name" placeholder="Second name">
+
+        <label for="birthday">Date of Birthday </label>
+        <input type="number" id="date" name="Birth date" placeholder="Birthday Date">
+        
     <script> </script>
 </body>
 </html>
