--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
         <p> For more information <href>click here </href> src </p>
     </div>
 
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="First name">
+            <label for="birthday">Date of Birthday </label>
+            <input type="number" id="date" name="Birth date" placeholder="Birthday Date">
 
-        <label> Second Name</label>
-        <input type="text" name="second name" placeholder="Second name">
+            <label> My Gender </label>
+            <input type="text" name="gender" placeholder="Gender">
 
-        <label for="birthday">Date of Birthday </label>
-        <input type="number" id="date" name="Birth date" placeholder="Birthday Date">
+                <div class="submit">
+                    <button>Submit</button>
+                </div>
+
         
+
     <script> </script>
 </body>
 </html>
