--- a/index.html
+++ b/index.html
@@ -27,7 +27,47 @@
                     <button>Submit</button>
                 </div>
 
-        
+                <table style="width: 100%;">
+                    <tr>
+                      <td>Day</th>
+                      <td>Male</td>
+                      <td>Female</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>Kwasi</td>
+                        <td>Akosua</td>
+                    </tr>
+                    <tr>
+                        <td>Monday</td>
+                        <td>Kwadwo</td>
+                        <td>Adwoa</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>Kwabena</td>
+                        <td>Abenaa</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td>Kwaku</td>
+                        <td>Akua</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>Yaw</td>
+                        <td>Yaa</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>Kofi</td>
+                        <td>Afua</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>Kwame</td>
+                        <td>Ama</td>
+                    </tr>
 
     <script> </script>
 </body>
