--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
     </div>
 
             <label for="birthday">Date of Birthday </label>
-            <input type="number" id="date" name="Birth date" placeholder="Birthday Date">
+            <input type="number" id="date" name="Birth date" placeholder="Birthday Date"> <br>
+
+            <label for="birthday">Month of Birthday </label>
+            <input type="number" id="Month" name="Birth date" placeholder="Birthday Date"> <br>
+
+            <label for="birthday">Year of Birthday </label>
+            <input type="number" id="Year" name="Birth date" placeholder="Birthday Date"> <br>
 
             <label> My Gender </label>
-            <input type="text" name="gender" placeholder="Gender">
+            <input type="text" name="gender" placeholder="Gender"> <br>
 
                 <div class="submit">
-                    <button>Submit</button>
+                    <button onclick="name()">Submit</button>
                 </div>
 
                 <table style="width: 50%;">
@@ -70,6 +76,6 @@
                                             </tr>
                 </table>
 
-    <script> </script>
+    <script src="index.js"> </script>
 </body>
 </html>
