--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
         <p> For more information <href>click here </href> src </p>
     </div>
+    <form action="">
 
             <label for="birthday">Date of Birthday </label>
             <input type="number" id="date" name="Birth date" placeholder="Birthday Date"> <br>
 
             <label for="birthday">Month of Birthday </label>
-            <input type="number" id="Month" name="Birth date" placeholder="Birthday Date"> <br>
+            <input type="number" id="month" name="Birth date" placeholder="Birthday Date"> <br>
 
             <label for="birthday">Year of Birthday </label>
-            <input type="number" id="Year" name="Birth date" placeholder="Birthday Date"> <br>
+            <input type="number" id="year" name="Birth date" placeholder="Birthday Date"> <br>
 
-            <label> My Gender </label>
-            <input type="text" name="gender" placeholder="Gender"> <br>
+            Male <input type="radio" id="male" name="gender"> <br>
+            Female <input type="radio" id="female" name="gender">
 
-                <div class="submit">
-                    <button onclick="name()">Submit</button>
-                </div>
+                    <button type = "button" onclick="myname()">Submit</button>
+            </form>
 
                 <table style="width: 50%;">
                     <tr>
