--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <p> This application takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.<br> <strong> This application is user friendly and user responsive.</strong></br></p> 
         <h2> About Akan Culture.</h2>
         <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
-        <p> For more information <href>click here </href> src </p>
+       <h1 id="culture"></h1>
     </div>
-    <form action="">
+    <div class="first">
+        <form action="">
 
             <label for="birthday">Date of Birthday </label>
             <input type="number" id="date" name="Birth date" placeholder="Birthday Date"> <br>
@@ -31,8 +32,8 @@
             Female <input type="radio" id="female" name="gender">
 
                     <button type = "button" onclick="myname()">Submit</button>
-            </form>
-
+        </form>
+    </div>    
                 <table style="width: 50%;">
                     <tr>
                       <td>Day</th>
