Add background color and text color to submit button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="number" id="year" name="Birth date" placeholder="Birthday Date"> <br>
 
             Male <input type="radio" id="male" name="gender"> <br>
-            Female <input type="radio" id="female" name="gender">
+            Female <input type="radio" id="female" name="gender"> <br>
 
                     <button type = "button" onclick="myname()">Submit</button>
         </form>
