Modified the placeholders

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <form action="">
 
             <label for="birthday">Date of Birthday </label>
-            <input type="number" id="date" name="Birth date" placeholder="Birthday Date"> <br>
+            <input type="number" id="date" name="Birth date" placeholder="Date"> <br>
 
             <label for="birthday">Month of Birthday </label>
-            <input type="number" id="month" name="Birth date" placeholder="Birthday Date"> <br>
+            <input type="number" id="month" name="Birth date" placeholder="Month"> <br>
 
             <label for="birthday">Year of Birthday </label>
-            <input type="number" id="year" name="Birth date" placeholder="Birthday Date"> <br>
+            <input type="number" id="year" name="Birth date" placeholder="Year"> <br>
 
             Male <input type="radio" id="male" name="gender"> <br>
             Female <input type="radio" id="female" name="gender"> <br>
