--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
                     <button type = "button" onclick="myname()">Submit</button>
         </form>
-    </div>    
+    </div>   
+            <div class="tb"> 
                 <table style="width: 50%;">
                     <tr>
                       <td>Day</th>
@@ -76,6 +77,7 @@
                                                 <td>Ama</td>
                                             </tr>
                 </table>
+            </div>    
 
     <script src="index.js"> </script>
 </body>
