Add footer in HTML and style in CSS

--- a/index.html
+++ b/index.html
@@ -81,4 +81,7 @@
 
     <script src="index.js"> </script>
 </body>
+    <footer>
+        <p> Caleb Mwangi copyright @ 2021</p>
+    </footer>
 </html>
