Add a read more link to about paragraph

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h2>Description.</h2>
         <p> This application takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.<br> <strong> This application is user friendly and user responsive.</strong></br></p> 
         <h2> About Akan Culture.</h2>
-        <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+        <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.<br>
+            For more information <a href="https://en.wikipedia.org/wiki/Akan_people#:~:text=The%20Akan%20(%2F%CB%88%C3%A6k,of%20the%20Niger%E2%80%93Congo%20family." target="_blank"> Read more </a> 
+        </p>
        <h1 id="culture"></h1>
     </div>
     <div class="first">
