Add h1 class id

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p> Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.<br>
             For more information <a href="https://en.wikipedia.org/wiki/Akan_people#:~:text=The%20Akan%20(%2F%CB%88%C3%A6k,of%20the%20Niger%E2%80%93Congo%20family." target="_blank"> Read more </a> 
         </p>
-       
+       <h1 id="culture"></h1>
     </div>
         <div class="first">
             <form action="">
@@ -82,11 +82,8 @@
             </div>    
 
     <script src="index.js"> </script>
-
 </body>
-    
     <footer>
         <p> Caleb Mwangi copyright @ 2021</p>
     </footer>
-
-    </html>
+</html>
